unpackaged/main/default/objects/Product2/fields/Dangerous_Goods_Code__c.field-meta.xml
<CustomField>
    <fullName>Dangerous_Goods_Code__c</fullName>
    <label>Dangerous Goods Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>