unpackaged/main/default/objects/Product2/fields/DER_Marketability__c.field-meta.xml
<CustomField>
    <fullName>DER_Marketability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DER Marketability</label>
    <type>Checkbox</type>
</CustomField>