unpackaged/main/default/objects/Product2/fields/pro_ODS__c.field-meta.xml
<CustomField>
    <fullName>pro_ODS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ODS?</label>
    <type>Checkbox</type>
</CustomField>