unpackaged/main/default/objects/Product2/fields/QPS__c.field-meta.xml
<CustomField>
    <fullName>QPS__c</fullName>
    <label>QPS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>