unpackaged/main/default/objects/Product2/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Test</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>