unpackaged/main/default/objects/Product2/listViews/Tax_Codes.listView-meta.xml
<ListView>
    <fullName>Tax_Codes</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>inscor__Keyword__c</columns>
    <columns>inscor__Non_Inventory_Item__c</columns>
    <columns>inscor__Revenue_Account__c</columns>
    <columns>AcctSeed__Tax_Code__c</columns>
    <columns>AcctSeed__Tax_Rate__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeed__Accounting_Type__c</field>
        <operation>equals</operation>
        <value>Tax Rate</value>
    </filters>
    <label>Tax Codes</label>
</ListView>