unpackaged/main/default/objects/Product2/listViews/Tools.listView-meta.xml
<ListView>
    <fullName>Tools</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>inscor__Keyword__c</columns>
    <columns>inscor__Life_Limited__c</columns>
    <columns>inscor__Serialized__c</columns>
    <columns>inscor__UOM_New__c</columns>
    <columns>inscor__Non_Inventory_Item__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tools</label>
</ListView>